# esp32-control

./: .gitignore  docs.typ  pyproject.toml
docs/: docs.typ
embeded/: core.py  filter.py  main.py  motion.py  motor.py  sensor.py  uart.py
service/: __init__.py  app.py  apriltag.py  conn.py  dobot.py  main.py  uart.py
src/: core.py  dobot.py  filter.py  indicator.py  main.py  motion.py  motor.py  ps2.py  sensor.py  uart.py
